// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedPathPreview should evaluate preview path when newRecord is true 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #798291;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  border: 0;
  padding-left: 5px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: relative;
}

<label
    class="emotion-0 emotion-1"
    data-testid="site_path-preview"
  >
    preview-path/index.md
  </label>
</DocumentFragment>
`;

exports[`ConnectedPathPreview should use existing path when newRecord is false 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #798291;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  border: 0;
  padding-left: 5px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: relative;
}

<label
    class="emotion-0 emotion-1"
    data-testid="site_path-preview"
  >
    existing-path/index.md
  </label>
</DocumentFragment>
`;

exports[`PathPreview should render successfully and match snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #798291;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  border: 0;
  padding-left: 5px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: relative;
}

<label
    class="emotion-0 emotion-1"
    data-testid="site_path-preview"
  >
    posts/2019/index.md
  </label>
</DocumentFragment>
`;
